--- a/Where to live in Toronto? .ipynb
+++ b/Where to live in Toronto? .ipynb
@@ -23,6 +23,8 @@
     "Let's imagine that my dream comes true and I am able to move into Toronto, so the next question pops up: Where should I live? What neighborhood will be most suitable for my lifestyle? \n",
     "As a little background I am 27 years old recently married man, looking to bring some kids into our life on the upcoming 2 to 3 years, therefore making this decision is crucial for the forseeable future. \n",
     "\n",
+    "**So who will find this analysis helpful?** Well, for any person with family or soon to have family on the 30s planning to move into the lovely Toronto. \n",
+    "\n",
     "To find out where to live I will do a deep analysis on Toronto's neighborhoods, compare them by using Foursquare data to find what venues are near each location, making it easier to decide where we would like to stay. \n",
     "\n",
     "I will follow the course idea of clustering based on venues and frequency of venueas, then show them on a map. </p>"
