--- a/Where to live in Toronto? .ipynb
+++ b/Where to live in Toronto? .ipynb
@@ -25,6 +25,8 @@
     "\n",
     "**So who will find this analysis helpful?** Well, for any person with family or soon to have family on the 30s planning to move into the lovely Toronto. \n",
     "\n",
+    "I will look for **neighborhoods with schools and parks**, so my (future) kids will be able to go easily to school and play outside without much trouble. Another condition will be that there are not so many bars or nightclubs, since I would (try to) sleep my delightful 8 hours a night. \n",
+    "\n",
     "To find out where to live I will do a deep analysis on Toronto's neighborhoods, compare them by using Foursquare data to find what venues are near each location, making it easier to decide where we would like to stay. \n",
     "\n",
     "I will follow the course idea of clustering based on venues and frequency of venueas, then show them on a map. </p>"
